@@ -1,5 +1,8 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
+	tw-2.0.0 and newer have the method we need.
+
 	* buildbot/twcompat.py (implements): remove this method
 	* buildbot/*: import implements() from zope.interface directly
 
